--- a/src/index.html
+++ b/src/index.html
@@ -3,26 +3,29 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Hello Rigo with Vanilla.js</title>
-    <link
-      rel="stylesheet"
-      href="https://use.fontawesome.com/releases/v5.2.0/css/all.css"
-      integrity="sha384-hWVjflwFxL6sNzntih27bfxkr27PmbbK/iSvJ+a4+0owXq79v+lsFkW54bOGbiDQ"
+    <title>Random Card Generator!</title>
+    <script
+      src="https://kit.fontawesome.com/ad2c299fee.js"
       crossorigin="anonymous"
-    />
+    ></script>
     <link rel="shortcut icon" href="./4geeks.ico" />
   </head>
   <body>
+    <div class="bg-image"></div>
     <div class="container-fluid text-center">
-      <h1 class="mt-5">Hello Rigo!</h1>
-      <img src="./rigo-baby.jpg" />
-      <p class="alert alert-warning mt-4">
-        If this text is <b>not</b> centered and <b>yellow</b>, you probably have
-        an error
-      </p>
-      <div class="fixed-bottom p-4">
-        Made with ❤️ by
-        <a href="https://www.4geeksacademy.com">4Geeks Academy</a>
+      <div class="row justify-content-center">
+        <div class="body col-12 w-25">
+          <div class="inner">
+            <div class="sym" style="float: left;">♥</div>
+            <div class="cardbody">
+              <h1 class="num">5</h1>
+            </div>
+            <div id="downsym" class="sym" style="float: right;">♥</div>
+          </div>
+          <button type="button" class="btn btn-outline-light mt-3">
+            Shuffle
+          </button>
+        </div>
       </div>
     </div>
   </body>
